$Id$

****************************** DRUPAL 5 BRANCH ********************************

February 4, 2009
----------------
#367481 by Michelle: Fixed up statistics including changing to use theme_username.

February 3, 2009
----------------
#366301 by Michelle, ipwa: Fixed author pane layout on stacked styles.
#365491 by Michelle, bouton: Cleaned up legend markup / css.

January 27, 2009
----------------
#315972 by Michelle: Added link to jump to last post.

January 26, 2009
----------------
#102743 by yoroy: Updated topic icons.
#363061 by Michelle, paulcouture: Eliminated duplicate users from statistics.
Style clean up. Fixed #364385 and #360888 along the way.

January 23, 2009
----------------
#303548 by Michelle: Added imagecache support for forum avatars.

January 22, 2009
----------------
#360897 by RedKing: Added french translation.
#352945 by Michelle, Heine: Added check that user is confirmed for last user in statistics.
#351390 by Matafleur: Allow treat as forum post override to set item to _not_ be treated as a forum post.
#328029 by Michelle: Added updated label in topic list.
#328029 by Michelle: Added new label as well.

January 18, 2009
----------------
#303564 by Psicomante, Michelle: Added legend for forum icons.

January 16, 2009
----------------
#351395 by elfur: Added missing t() around link to top.
#338722 by catch: Fixed bug in mark topics as read.
NOISSUE by Michelle: Removed unneeded js file.
#347818 by xsphere: Fixed typo that caused error when replying to commment.
NOISSUE by Michelle: Added the author pane dependency to the .info file.

January 8, 2009
---------------
#356239 by Michelle: Fixed broken preprocess system left over from AP conversion.
NOISSUE by Michelle: Mass copy to make sure cvs is in sync with my dev copy.

December 30, 2008
-----------------
#343853 by Michelle: Ripped out author pane code and made AF dependent on the author pane module.

December 12, 2008 -- ALPHA 16
-----------------