@@ -182,18 +182,20 @@ ul.forum-links {
 
 /*** FORUM THREADS ***********************************************************/
 
-.forum-post-header {
+/* Header at the top of each topic/thread */
+.forum-topic-header {
   margin: 10px 0 2px 0;
 }
 
-.forum-post-header .forum-links {
+.forum-topic-header .forum-links {
   float: left;
 }
 
-.forum-post-header .reply-count {
+.forum-topic-header .reply-count {
   float: right;
 }
 
+/* Individual forum post */
 .forum-post {
   margin: 0 0 5px 0;
 }
