@@ -15,18 +15,4 @@
  */
 ?>
 
-<div class="forum-post-header clear-block">
-  <?php print $reply_link; ?>
-
-  <div class="reply-count">
-    <?php print $total_posts; ?>
-
-    <?php if (!empty($new_posts)): ?>
-      [<?php print $new_posts; ?>]
-    <?php endif; ?>
-
-    <?php if (!empty($last_post)): ?>
-       [<?php print $last_post; ?>]
-    <?php endif; ?>
-  </div>
-</div>
+<?php print $topic_header ?>
