@@ -2,6 +2,10 @@ $Id$
 
 ****************************** DRUPAL 5 BRANCH ********************************
 
+February 6, 2009
+----------------
+#315972 by Michelle: Separated out topic header into its own theme file and made the reply link a themeable function.
+
 February 4, 2009
 ----------------
 #367481 by Michelle: Fixed up statistics including changing to use theme_username.
